hphp/hack/test/typecheck/ffp/yield_from_bad1.php
<?hh

function foo(): void {
  bar(yield from boo());
}
